--- a/UltraEdit/UltraEdit.css
+++ b/UltraEdit/UltraEdit.css
@@ -1,94 +1,437 @@
-@media screen and (max-width:1100px) {
-    .logo img{
-        padding-right: 54px;
-    }
-    .navmain{
-        width: 90vw;
-    }
-    .name li{
-        font-size: 10px;
-    }
-}
-@media screen and (max-width:900px){
-    .name {
-        display: none;
-    }
-    .extra ul li:first-child{
-        display: none;
-    }
-    .ham{
-        padding: 20px;
-    }
-    .ham img{
-        height: 30px;
-    }
-}
-@media screen and (min-width:901px) {
-    .ham{
-        display: none;
-    }
-}
-*{
+/* Global Reset */
+* {
     padding: 0;
     margin: 0;
-    
-}
-li{
-    list-style: none;
+    box-sizing: border-box;
+  }
+  
+  body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  li {
+    list-style: none;
     font-size: 14px;
     height: 20px;
-}
-header{
+  }
+  
+  header {
     margin-top: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-nav{
+  }
+  
+  nav {
     display: flex;
-    height: auto;
     width: 80vw;
     align-items: center;
+    justify-content: space-between;
     column-gap: 30px;
-}
-.navmain{
+  }
+  
+  .navmain {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-}
-.logo img{
+  }
+  
+  .logo img {
     width: 180px;
-    box-sizing: border-box;
-}
-.name ul{
+  }
+  
+  .name ul {
     display: flex;
     column-gap: 20px;
-}
-.extra ul{
+  }
+  
+  .extra ul {
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 20px;
-}
-.name li img{
+  }
+  
+  .name li img {
     width: 15px;
     text-align: center;
     padding-left: 5px;
-    position: relative;
-    top: 3px;
-}
-.extra img{
+  }
+  
+  .extra img {
     width: 26px;
-}
-.search img{
+  }
+  
+  .search img {
     width: 16px;
-}
-button{
-    background: none;
-    width: 30px;
-    height: 30px;
-    border: none ;
-    background-color: rgba(0, 141, 249, 0.43);
-}
+  }
+  
+  /* Hamburger Menu */
+  .hamburger {
+    display: none;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+  }
+  
+  .hamburger span {
+    display: block;
+    height: 3px;
+    width: 25px;
+    background-color: black;
+  }
+  
+  /* Media Queries for Responsiveness */
+  @media screen and (max-width: 1010px) {
+    .name {
+      display: none;
+    }
+  
+    .name ul.active {
+      display: flex;
+    }
+  
+    .hamburger {
+      display: flex;
+    }
+  
+    .extra ul li:nth-child(1) {
+      display: none;
+    }
+    nav{
+      width: 90vw;
+      align-items: center;
+      justify-content: center;
+    }
+    .navmain {
+      justify-content: start;
+      width: 90%;
+    }
+  }
+  
+  /*Main Content Started*/
+  
+  main {
+    width: 65vw;
+    margin-top: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60vw;
+    height: auto;
+  }
+  .text h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 42px;
+    font-weight: 400;
+    text-align: center;
+  }
+  .text h3 {
+    font-weight: 100;
+    font-size: 22px;
+  }
+  .text h1 strong {
+    font-weight: bolder;
+  }
+  .text .uppertext {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+  }
+  .text .lowertext {
+    margin-top: 50px;
+    text-align: center;
+  }
+  .text .button {
+    margin-top: 40px;
+  }
+  .text .button button {
+    padding: 15px;
+    color: white;
+    background-color: rgb(45, 184, 215);
+    font-weight: bolder;
+    font-size: large;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+  main .endtext {
+    height: 23px;
+    display: flex;
+    align-self: flex-start;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+  }
+  .endtext h3 {
+    font-weight: 400;
+    font-size: 22px;
+  }
+  .endtext img {
+    width: 120px;
+  }
+  .endtext p {
+    display: flex;
+    align-self: flex-end;
+    font-weight: lighter;
+    font-size: 12px;
+  }
+  
+  /*Grid main start*/
+  
+  .grid {
+    margin-top: 50px;
+    width: 65vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 20px;
+  }
+  .grid div {
+    border-radius: 3px;
+    padding: 20px;
+    background-color: rgb(246, 245, 245);
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .grid div h2 {
+    font-size: 16px;
+  }
+  .grid div p {
+    font-size: 12px;
+    line-height: 3;
+  }
+  .grid div button {
+    border: none;
+    background-color: rgb(93, 177, 93);
+    padding: 10px;
+    color: white;
+    font-weight: bolder;
+    border-radius: 5px;
+  }
+  .grid .english {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  
+  @media screen and (max-width: 850px) {
+    .grid {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+    main {
+      width: 88vw;
+      margin-top: 40px;
+    }
+    .text {
+      width: 88vw;
+    }
+    .endtext p {
+      font-weight: 400;
+    }
+    .text h1 {
+      font-size: 36px;
+    }
+    .text h3 {
+      font-size: 18px;
+      font-weight: 400;
+    }
+    .signup {
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
+  @media screen and (max-width: 550px) {
+    .grid {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+    }
+  }
+  
+  /*Sign up section*/
+  
+  section {
+    padding: 50px;
+    background-color: rgb(33, 32, 32);
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .signup {
+    height: auto;
+    width: 65vw;
+    display: flex;
+    align-items: center;
+    column-gap: 100px;
+    justify-content: center;
+  }
+  .etext {
+    height: 80px;
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .etext h3 {
+    text-align: center;
+    color: white;
+    font-size: 20px;
+  }
+  .etext p {
+    text-align: center;
+    color: white;
+    font-size: 14px;
+  }
+  .form {
+    background-color: white;
+    border: 2px solid;
+    width: 350px;
+    height: 270px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+  }
+  .form h3 {
+    color: rgb(16, 179, 255);
+    font-weight: lighter;
+    padding-bottom: 30px;
+    font-size: 22px;
+    text-align: center;
+  }
+  .form form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    width: 95%;
+    height: 95%;
+    position: relative;
+  }
+  .form label {
+    text-align: center;
+    font-weight: lighter;
+    font-size: 13px;
+  }
+  .form input {
+    font-size: 12px;
+    width: 90%;
+    height: 20%;
+    padding: 15px;
+    border: 1px solid rgb(220, 220, 220);
+  }
+  .form button {
+    border: none;
+    background-color: rgb(25, 158, 206);
+    color: white;
+    width: 90%;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: bolder;
+    box-shadow: 0px 5px 35px rgb(142, 218, 236);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .section2 {
+    margin-top: -2px;
+    color: white;
+    line-height: 2.5;
+  }
+  .eendtext {
+    width: 65vw;
+  }
+  .eendtext a {
+    text-decoration: none;
+    color: rgb(0, 182, 249);
+  }
+  .eendtext h3 {
+    font-size: 18px;
+    font-weight: 400;
+  }
+  .eendtext p {
+    font-weight: 100;
+    font-size: 14px;
+  }
+  @media screen and (max-width: 850px) {
+    .etext {
+      width: 350px;
+      margin-bottom: 25px;
+      line-height: 1.5;
+    }
+    .section2 p {
+      font-weight: 300;
+    }
+  }
+  @media screen and (max-width: 380px) {
+    .etext {
+      width: 300px;
+      margin-bottom: 50px;
+      line-height: 1.5;
+    }
+    .form {
+      width: 300px;
+    }
+  }
+  footer {
+    margin: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  footer h3 {
+    font-family: monospace;
+    font-weight: 100;
+    color: rgb(197, 197, 197);
+    background-color: black;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px rgb(66, 66, 67);
+    cursor: pointer;
+  }
+  footer img {
+    width: 35px;
+    filter: grayscale();
+  }
+  .icon a:nth-child(2) img {
+    width: 50px;
+  }
+  footer .icon {
+    width: 150px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  @media screen and (max-width: 480px) {
+    footer {
+      width: 100%;
+    }
+  }
+  
