--- a/UltraEdit/UltraEdit.css
+++ b/UltraEdit/UltraEdit.css
@@ -17,6 +17,7 @@
     list-style: none;
     font-size: 14px;
     height: 20px;
+    cursor: pointer;
   }
   
   header {
@@ -226,6 +227,7 @@
     color: white;
     font-weight: bolder;
     border-radius: 5px;
+    cursor: pointer;
   }
   .grid .english {
     display: flex;
